images folder updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#shoes">Shoes</a></li>
               <li><a class="dropdown-item" href="#backpacks">Backpacks</a></li>
-              <li><a class="dropdown-item" href="#">miscellaneous</a></li>
+              <li><a class="dropdown-item" href="#miscellaneous">miscellaneous</a></li>
             </ul>
           </li>
           <li class="nav-item">
