--- a/index.html
+++ b/index.html
@@ -140,6 +140,52 @@
     </div>
   </div>
 
+  <div class="container" id="shoes">
+    <h2>Shoes</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img class="shoe-1" src="images/shoes/shoe-black.png" class="card-img-top" alt="shoe-1">
+          <div class="card-body">
+            <h5 class="card-title">Nike Na-335</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus itaque doloremque atque debitis aspernatur, illum maiores.
+            </p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$540</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-rednike.png" class="card-img-top" alt="shoe-2">
+          <div class="card-body">
+            <h5 class="card-title">Maxima Red 37</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi mollitia adipisci praesentium rerum dicta? Vero, repudiandae!</p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$400</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-lightblack.png" class="card-img-top" alt="shoe-3">
+          <div class="card-body">
+            <h5 class="card-title">Blackshine 990</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur illum numquam optio omnis, amet quasi!</p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$650</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   
