backpack section done

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img class="shoe-1" src="images/shoes/shoe-black.png" class="card-img-top" alt="shoe-1">
+          <img src="images/shoes/shoe-black.png" class="card-img-top" alt="shoe-1">
           <div class="card-body">
             <h5 class="card-title">Nike Na-335</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus itaque doloremque atque debitis aspernatur, illum maiores.
@@ -179,6 +179,52 @@
           </div>
           <div class="card-footer d-flex flex-column justify-content-center align-items-center">
             <h5>$650</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="backpacks">
+    <h2>Backpacks</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/backpacks/backpack-blue.png" class="card-img-top" alt="backpack-1">
+          <div class="card-body">
+            <h5 class="card-title">Blue Bird X-12</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam libero perspiciatis adipisci rerum odio consectetur.
+            </p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$300</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/backpacks/backpack-black.png" class="card-img-top" alt="backpack-2">
+          <div class="card-body">
+            <h5 class="card-title">Black 370</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi amet sunt odit recusandae aliquid saepe?</p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$250</h5>
+            <button class="buy-now-btn">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/backpacks/backpack-yellow.png" class="card-img-top" alt="backpack-3">
+          <div class="card-body">
+            <h5 class="card-title">Cuty Y-22</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse veritatis dignissimos sapiente amet, officiis provident in.</p>
+          </div>
+          <div class="card-footer d-flex flex-column justify-content-center align-items-center">
+            <h5>$220</h5>
             <button class="buy-now-btn">BUY NOW>></button>
           </div>
         </div>
