astha ecommerce website done

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#shoes">Shoes</a></li>
                 <li><a class="dropdown-item" href="#backpacks">Backpacks</a></li>
-                <li><a class="dropdown-item" href="#miscellaneous">miscellaneous</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://www.facebook.com/webdevelopersamsuddin/?ref=pages_you_manage">Contact Us</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contactus">Contact Us</a>
+              <a class="nav-link" target="_blank" href="https://www.facebook.com/webdevelopersamsuddin/?ref=pages_you_manage">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -230,6 +230,19 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="container d-flex justify-content-center align-items-center" id="subscribe">
+    <div class="stay-in-touch ">
+      <h3>STAY IN TOUCH</h3>
+      <H6>Get updated about sales and more</H6>
+      <input class="form-control" type="text" placeholder="Enter your email">
+      <button class="buy-now-btn subscribe-btn">Subscribe</button>
+    </div>
+  </div>
+
+  <div class="container">
+    <footer><p><small>&copy;2022, All rights reserved by Samsuddin.</small></p></footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
